# moment_ETAS

./: .gitignore  README.md  environment.yml  implementation_plan.md  pyproject.toml  spec.md
DOCS/: moment_etas_draft.docx
moment_etas/: __init__.py  params.py
moment_etas/model/: __init__.py  intensity.py  kernels.py  magnitude.py  moment_field.py  rupture.py
moment_etas/simulation/: __init__.py  simulate.py
moment_etas/visualization/: __init__.py  branching.py  plots.py
notebooks/: 01_exploration.ipynb  02_california.ipynb  03_branching.ipynb  03_california.ipynb
tests/: test_characterization.py  test_moment_limited_mmax.py  test_spatial_baseline.py
