[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moment-etas"
version = "0.1.0"
description = "Experimental moment-bounded spatio-temporal ETAS model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["moment_etas*"]
